Change conf for drizzle

--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -6,3 +6,10 @@ spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
+
+spark.shuffle.reduceLocality.enabled false
+spark.scheduler.drizzle false
+spark.scheduler.drizzle.wait 1.0
+spark.scheduler.drizzle.push false
+spark.eventLog.enabled true
+spark.eventLog.dir file:///mnt/spark-events
