--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -13,3 +13,4 @@ spark.scheduler.drizzle.wait 1.0
 spark.scheduler.drizzle.push false
 spark.eventLog.enabled true
 spark.eventLog.dir file:///mnt/spark-events
+spark.scheduler.drizzle.treeReduceOpt false
