--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -6,6 +6,7 @@ spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
+spark.broadcast.factory org.apache.spark.broadcast.HttpBroadcastFactory
 
 spark.shuffle.reduceLocality.enabled false
 spark.scheduler.drizzle false
@@ -13,3 +14,4 @@ spark.scheduler.drizzle.wait 1.0
 spark.scheduler.drizzle.push false
 spark.eventLog.enabled true
 spark.eventLog.dir file:///mnt/spark-events
+spark.shuffle.compress false
